force-app/main/default/objects/Retail_Warehouse__c/Retail_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Retail Warehouse</label>
    <nameField>
        <label>Retail Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>