force-app/main/default/objects/Retail_Warehouse__c/fields/ASM_Incharge__c.field-meta.xml
<CustomField>
    <fullName>ASM_Incharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASM Incharge</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Warehouses</relationshipLabel>
    <relationshipName>Retail_Warehouses</relationshipName>
    <type>Lookup</type>
</CustomField>