force-app/main/default/objects/Retail_Warehouse__c/fields/Assigned_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Customer__c</fullName>
    <label>Assigned to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>