force-app/main/default/objects/Retail_Warehouse__c/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <label>GST Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>