force-app/main/default/objects/Retail_Warehouse__c/fields/POC_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Email__c</fullName>
    <label>POC Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>