force-app/main/default/objects/Retail_Warehouse__c/fields/POC_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>POC_Phone_Number__c</fullName>
    <label>POC Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>