force-app/main/default/objects/Retail_Warehouse__c/fields/Point_of_Contact_POC_Name__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_POC_Name__c</fullName>
    <label>Point of Contact (POC) Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>