force-app/main/default/objects/Retail_Warehouse__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <label>Warehouse Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>