force-app/main/default/objects/Retail_Warehouse__c/fields/Warehouse_Stock_Management_Email__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Stock_Management_Email__c</fullName>
    <label>Warehouse Stock Management Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>