force-app/main/default/objects/Retail_Warehouse__c/fields/Warehouse_Type__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Type__c</fullName>
    <label>Warehouse Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avana Warehouse</fullName>
            </value>
            <value>
                <fullName>Distributor Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>