force-app/main/default/objects/Retail_Warehouse__c/validationRules/Phone_Number_10_digit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_10_digit_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  POC_Phone_Number__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>POC_Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number must be 10 digits long.</errorMessage>
</ValidationRule>