force-app/main/default/objects/Retail_Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Warehouse_Type__c</columns>
    <columns>Warehouse_Code__c</columns>
    <columns>ASM_Incharge__c</columns>
    <columns>Point_of_Contact_POC_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>